Bug 1208673 - Do HitTest with skipping non-leaf preserve-3d transform items. r=roc